eks/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: zeroconnectapi
  name: zeroconnectapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zeroconnectapi
  template:
    metadata:
      labels:
        io.kompose.service: zeroconnectapi
    spec:
      serviceAccountName: secretsmanager-policy-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
      containers:
        - name: zero-api
          image: 139013895924.dkr.ecr.us-east-1.amazonaws.com/zeroconnect-sql:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      restartPolicy: Always
